# ideal_words

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: clip_vit_large_14.py
ideal_words/: ideal_words.py
tests/: test_ideal_words.py
