[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
repository = "https://github.com/icetube23/ideal_words"

[project]
name = "ideal_words"
version = "0.0.1"
authors = [
  { name="icetube23" },
]
description = "A PyTorch implementation of ideal word computation."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["torch", "tqdm"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pre-commit"]
demo = ["open_clip_torch"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "single"
